--- a/SpringBoot02/build.gradle
+++ b/SpringBoot02/build.gradle
@@ -27,8 +27,10 @@ configurations {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf")  
+    compile 'org.webjars:bootstrap:3.3.1'		 
+    compile 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:1.2.5' 
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
