5th Commit: ADD L O G G E R

--- a/SpringBoot03/build.gradle
+++ b/SpringBoot03/build.gradle
@@ -27,6 +27,7 @@ configurations {
 }
 
 dependencies {
+	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.21'
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile 'org.webjars:bootstrap:3.3.1'
