10th Commit from local and modified UI

--- a/SpringBoot03/bin/application.properties
+++ b/SpringBoot03/bin/application.properties
@@ -1,7 +1,7 @@
 # LOGGING
-logging.path=/tmp/
-logging.file=bdcbook.log
-logging.level.com.bdcyclists.bdcbook=DEBUG
+#logging.path=C:\Users\
+logging.file=${java.io.tmpdir}/Spring.log
+logging.level.com.shantanu.bdcbook=DEBUG
 
 # THYMELEAF
 spring.thymeleaf.cache=false
